tests/rosetta/out/C/call-an-object-method-2.error
cc: exit status 1
/tmp/call-an-object-method-2.c:23:7: error: return type is an incomplete type
   23 | box_t New() {
      |       ^~~
/tmp/call-an-object-method-2.c: In function ‘New’:
/tmp/call-an-object-method-2.c:24:3: error: ‘sn’ undeclared (first use in this function)
   24 |   sn = New_sn + 1;
      |   ^~
/tmp/call-an-object-method-2.c:24:3: note: each undeclared identifier is reported only once for each function it appears in
/tmp/call-an-object-method-2.c:25:3: error: variable ‘b’ has initializer but incomplete type
   25 |   box_t b = (box_t){.secret = New_sn};
      |   ^~~~~
/tmp/call-an-object-method-2.c:25:22: error: ‘box_t’ has no member named ‘secret’
   25 |   box_t b = (box_t){.secret = New_sn};
      |                      ^~~~~~
/tmp/call-an-object-method-2.c:25:31: warning: excess elements in struct initializer
   25 |   box_t b = (box_t){.secret = New_sn};
      |                               ^~~~~~
/tmp/call-an-object-method-2.c:25:31: note: (near initialization for ‘(anonymous)’)
/tmp/call-an-object-method-2.c:25:20: error: invalid use of incomplete typedef ‘box_t’
   25 |   box_t b = (box_t){.secret = New_sn};
      |                    ^
/tmp/call-an-object-method-2.c:25:9: error: storage size of ‘b’ isn’t known
   25 |   box_t b = (box_t){.secret = New_sn};
      |         ^
/tmp/call-an-object-method-2.c:31:10: warning: ‘return’ with a value, in function returning void
   31 |   return b;
      |          ^
/tmp/call-an-object-method-2.c:23:7: note: declared here
   23 | box_t New() {
      |       ^~~
/tmp/call-an-object-method-2.c: In function ‘newFactory’:
/tmp/call-an-object-method-2.c:60:16: warning: assignment to ‘int’ from ‘void (*)()’ makes integer from pointer without a cast [-Wint-conversion]
   60 |   tmp1.data[0] = New;
      |                ^
/tmp/call-an-object-method-2.c:61:16: warning: assignment to ‘int’ from ‘int (*)()’ makes integer from pointer without a cast [-Wint-conversion]
   61 |   tmp1.data[1] = Count;
      |                ^
/tmp/call-an-object-method-2.c:62:10: error: incompatible types when returning type ‘list_int’ but ‘int’ was expected
   62 |   return tmp1;
      |          ^~~~
/tmp/call-an-object-method-2.c: In function ‘_mochi_main’:
/tmp/call-an-object-method-2.c:67:23: error: request for member ‘data’ in something not a structure or union
   67 |   int (*New)() = funcs.data[0];
      |                       ^
/tmp/call-an-object-method-2.c:68:25: error: request for member ‘data’ in something not a structure or union
   68 |   int (*Count)() = funcs.data[1];
      |                         ^
