tests/rosetta/out/C/call-an-object-method-2.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:48Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:48Z
#include <stdio.h>
#include <stdlib.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct box_t box_t;

static int New_sn;
box_t New() {
  sn = New_sn + 1;
  box_t b = (box_t){.secret = New_sn};
  if (New_sn == 1) {
    b.contents = "rabbit";
  } else if (New_sn == 2) {
    b.contents = "rock";
  }
  return b;
}

static int Count_sn;
int Count() { return Count_sn; }

typedef struct box_t {
  char *Contents;
  int secret;
} box_t;
typedef struct {
  int len;
  box_t *data;
} box_list_t;
box_list_t create_box_list(int len) {
  box_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(box_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
int Box_TellSecret(box_t *self) { return self->secret; }

int newFactory() {
  int sn = 0;
  list_int tmp1 = list_int_create(2);
  tmp1.data[0] = New;
  tmp1.data[1] = Count;
  return tmp1;
}

int _mochi_main() {
  int funcs = newFactory();
  int (*New)() = funcs.data[0];
  int (*Count)() = funcs.data[1];
  return 0;
}
int main() { return _mochi_main(); }
